--- a/front/packages/@core/preferences/package.json
+++ b/front/packages/@core/preferences/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sugar/layout-ui",
+  "name": "@sugar-core/preferences",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -8,16 +8,15 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@ant-design/icons": "4.0.0",
-    "@vitejs/plugin-react-swc": "^3.0.0",
     "@reduxjs/toolkit": "^2.2.7",
     "react-redux": "^9.1.2",
+
+    "@vitejs/plugin-react-swc": "^3.0.0",
     "handlebars": "^4.7.8",
     "vite": "^4.0.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
-    "@sugar-core/preferences": "workspace:*",
     "@sugar-core/typings": "workspace:*",
     "@sugar/eslint-config-custom": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
