--- a/front/pnpm-workspace.yaml
+++ b/front/pnpm-workspace.yaml
@@ -2,6 +2,8 @@ packages:
   # all packages in direct subdirs of packages/
   - 'packages/*'
   - 'packages/effects/*'
+  - 'packages/@core/*'
+  - 'packages/@core/ui-kit/*'
   - 'apps/*'
   - 'internal/vite-config'
   # exclude packages that are inside test directories
