--- a/front/packages/effects/layouts/package.json
+++ b/front/packages/effects/layouts/package.json
@@ -19,6 +19,7 @@
     "@changesets/cli": "^2.26.0",
     "@sugar-core/preferences": "workspace:*",
     "@sugar-core/typings": "workspace:*",
+    "@sugar/locales":"workspace:*",
     "@sugar/eslint-config-custom": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
