--- a/front/pnpm-workspace.yaml
+++ b/front/pnpm-workspace.yaml
@@ -4,6 +4,7 @@ packages:
   - 'packages/effects/*'
   - 'packages/@core/*'
   - 'packages/@core/ui-kit/*'
+  - 'packages/@core/base/*'
   - 'apps/*'
   - 'internal/vite-config'
   # exclude packages that are inside test directories
