--- a/backed/sugar-admin-dependencies/pom.xml
+++ b/backed/sugar-admin-dependencies/pom.xml
@@ -5,11 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
 
-    <parent>
-        <groupId>cn.sugarAdmin.boot</groupId>
-        <artifactId>sugar-admin</artifactId>
-        <version>2.2.0-snapshot</version>
-    </parent>
+
 
     <groupId>cn.sugarAdmin.boot</groupId>
     <artifactId>sugar-admin-dependencies</artifactId>
@@ -419,11 +415,11 @@
             <!-- 工作流相关结束 -->
 
             <!-- 工具类相关 -->
-<!--            <dependency>-->
-<!--                <groupId>cn.iocoder.boot</groupId>-->
-<!--                <artifactId>yudao-common</artifactId>-->
-<!--                <version>${revision}</version>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>cn.sugarAdmin.boot</groupId>
+                <artifactId>sugar-admin-common</artifactId>
+                <version>${revision}</version>
+            </dependency>
 
 <!--            <dependency>-->
 <!--                <groupId>cn.iocoder.boot</groupId>-->
