移植芋道源码 mabatis相关模块

--- a/backed/sugar-admin-framework/pom.xml
+++ b/backed/sugar-admin-framework/pom.xml
@@ -11,9 +11,9 @@
     <packaging>pom</packaging>
     <modules>
         <module>sugar-admin-common</module>
-<!--        <module>yudao-spring-boot-starter-mybatis</module>-->
+<!--        <module>sugar-admin-spring-boot-starter-mybatis</module>-->
 <!--        <module>yudao-spring-boot-starter-redis</module>-->
-<!--        <module>yudao-spring-boot-starter-web</module>-->
+<!--        <module>sugar-admin-spring-boot-starter-web</module>-->
 <!--        <module>yudao-spring-boot-starter-security</module>-->
 <!--        <module>yudao-spring-boot-starter-websocket</module>-->
 
@@ -29,6 +29,8 @@
 <!--        <module>yudao-spring-boot-starter-biz-data-permission</module>-->
 <!--        <module>yudao-spring-boot-starter-biz-ip</module>-->
         <module>sugar-admin-common</module>
+        <module>sugar-admin-spring-boot-starter-mybatis</module>
+        <module>sugar-admin-spring-boot-starter-web</module>
     </modules>
 
     <artifactId>sugar-admin-framework</artifactId>
