--- a/backed/sugar-admin-dependencies/pom.xml
+++ b/backed/sugar-admin-dependencies/pom.xml
@@ -126,11 +126,11 @@
             </dependency>
 
             <!-- Web 相关 -->
-<!--            <dependency>-->
-<!--                <groupId>cn.iocoder.boot</groupId>-->
-<!--                <artifactId>yudao-spring-boot-starter-web</artifactId>-->
-<!--                <version>${revision}</version>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>cn.sugarAdmin.boot</groupId>
+                <artifactId>sugar-admin-spring-boot-starter-web</artifactId>
+                <version>${revision}</version>
+            </dependency>
 
 <!--            <dependency>-->
 <!--                <groupId>cn.iocoder.boot</groupId>-->
@@ -156,11 +156,11 @@
             </dependency>
 
             <!-- DB 相关 -->
-<!--            <dependency>-->
-<!--                <groupId>cn.iocoder.boot</groupId>-->
-<!--                <artifactId>yudao-spring-boot-starter-mybatis</artifactId>-->
-<!--                <version>${revision}</version>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>cn.sugarAdmin.boot</groupId>
+                <artifactId>sugar-admin-spring-boot-starter-mybatis</artifactId>
+                <version>2.2.0-snapshot</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.alibaba</groupId>
