--- a/backed/sugar-admin-framework/sugar-admin-spring-boot-starter-web/pom.xml
+++ b/backed/sugar-admin-framework/sugar-admin-spring-boot-starter-web/pom.xml
@@ -59,15 +59,15 @@
 
         <!-- 业务组件 -->
         <dependency>
-            <groupId>cn.iocoder.boot</groupId>
-            <artifactId>yudao-module-infra-api</artifactId> <!-- 需要使用它，进行操作日志的记录 -->
+            <groupId>cn.sugarAdmin.boot</groupId>
+            <artifactId>sugar-admin-module-infra-api</artifactId> <!-- 需要使用它，进行操作日志的记录 -->
             <version>${revision}</version>
         </dependency>
-        <dependency>
-            <groupId>cn.iocoder.boot</groupId>
-            <artifactId>yudao-module-system-api</artifactId> <!-- 需要使用它，进行错误码的记录 -->
-            <version>${revision}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>cn.iocoder.boot</groupId>-->
+<!--            <artifactId>yudao-module-system-api</artifactId> &lt;!&ndash; 需要使用它，进行错误码的记录 &ndash;&gt;-->
+<!--            <version>${revision}</version>-->
+<!--        </dependency>-->
 
         <!-- xss -->
         <dependency>
