--- a/front/packages/effects/common-ui/package.json
+++ b/front/packages/effects/common-ui/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "front",
+  "name": "@sugar/common-ui",
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "turbo run dev ",
-    "dev:phone": "pnpm --filter @sugar/phone dev",
-    "dev:web": "pnpm --filter @sugar/webs dev",
-    "new-app": "pnpm exec plop app",
-    "new-app-ts": "pnpm exec plop app-ts",
-    "new-library": "pnpm exec plop library",
-    "new-library-ts": "pnpm exec plop library-ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "dependencies": {
+    "@ant-design/icons": "4.0.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "react-redux": "^9.1.2",
     "handlebars": "^4.7.8",
-    "tailwindcss-animate": "^1.0.7",
     "vite": "^4.0.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
+    "@sugar-core/preferences": "workspace:*",
+    "@sugar-core/typings": "workspace:*",
+    "@sugar/locales":"workspace:*",
     "@sugar/eslint-config-custom": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -29,13 +27,14 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
-    "autoprefixer": "^10.4.20",
+    "antd": "^5.10.0",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "jsdom": "latest",
     "lint-staged": "^13.1.0",
     "plop": "^3.1.1",
-    "postcss": "^8.4.45",
     "prettier": "^2.8.1",
-    "tailwindcss": "^3.4.10",
+    "styled-components": "^5.3.9",
     "turbo": "^1.10.12",
     "typescript": "^5",
     "vitest": "^0.25.8"
