--- a/front/packages/@core/ui-kit/shadcn-ui/package.json
+++ b/front/packages/@core/ui-kit/shadcn-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sugar/common-ui",
+  "name": "@sugar-core/shadcn-ui",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -8,19 +8,17 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@ant-design/icons": "4.0.0",
-    "@vitejs/plugin-react-swc": "^3.0.0",
     "@reduxjs/toolkit": "^2.2.7",
     "react-redux": "^9.1.2",
+    "@ant-design/icons": "4.0.0",
+
+    "@vitejs/plugin-react-swc": "^3.0.0",
     "handlebars": "^4.7.8",
     "vite": "^4.0.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
-    "@sugar-core/preferences": "workspace:*",
     "@sugar-core/typings": "workspace:*",
-    "@sugar-core/shadcn-ui": "workspace:*",
-    "@sugar/locales":"workspace:*",
     "@sugar/eslint-config-custom": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -28,8 +26,6 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
-    "antd": "^5.10.0",
-    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "jsdom": "latest",
     "lint-staged": "^13.1.0",
