--- a/front/packages/@core/ui-kit/shadcn-ui/package.json
+++ b/front/packages/@core/ui-kit/shadcn-ui/package.json
@@ -34,7 +34,73 @@
     "styled-components": "^5.3.9",
     "turbo": "^1.10.12",
     "typescript": "^5",
-    "vitest": "^0.25.8"
+    "vitest": "^0.25.8",
+    "@hookform/resolvers": "^3.1.0",
+    "@radix-ui/react-accessible-icon": "^1.0.3",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-context-menu": "^2.1.4",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-hover-card": "^1.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.3",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-portal": "^1.0.4",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "@tanstack/react-table": "^8.9.1",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/og": "^0.0.21",
+    "change-case": "^5.4.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^1.2.1",
+    "cmdk": "^1.0.0",
+    "contentlayer2": "^0.4.6",
+    "date-fns": "^2.30.0",
+    "embla-carousel-autoplay": "8.0.0-rc15",
+    "embla-carousel-react": "8.0.0-rc15",
+    "framer-motion": "^11.0.24",
+    "geist": "^1.2.2",
+    "input-otp": "^1.2.2",
+    "jotai": "^2.1.0",
+    "lodash.template": "^4.5.0",
+    "lucide-react": "0.359.0",
+    "markdown-wasm": "^1.2.0",
+    "next": "14.3.0-canary.43",
+    "next-contentlayer2": "^0.4.6",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-day-picker": "^8.7.1",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.2",
+    "react-resizable-panels": "^2.0.22",
+    "react-wrap-balancer": "^0.4.1",
+    "recharts": "2.12.7",
+    "sharp": "^0.31.3",
+    "sonner": "^1.2.3",
+    "swr": "2.2.6-beta.3",
+    "tailwind-merge": "^1.12.0",
+    "ts-morph": "^22.0.0",
+    "vaul": "0.9.0",
+    "zod": "^3.21.4"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": "eslint --ext .js,.jsx,.ts,.tsx --fix --max-warnings=0",
