--- a/front/packages/effects/common-ui/package.json
+++ b/front/packages/effects/common-ui/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "react-redux": "^9.1.2",
     "handlebars": "^4.7.8",
+    "react-router-dom": "^6.9.0",
     "vite": "^4.0.0"
   },
   "devDependencies": {
