--- a/front/packages/@core/ui-kit/shadcn-ui/package.json
+++ b/front/packages/@core/ui-kit/shadcn-ui/package.json
@@ -8,33 +8,16 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
-    "react-redux": "^9.1.2",
     "@ant-design/icons": "4.0.0",
-
+    "@reduxjs/toolkit": "^2.2.7",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "handlebars": "^4.7.8",
-    "vite": "^4.0.0"
+    "react-redux": "^9.1.2",
+    "vite": "^4.0.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
-    "@sugar-core/typings": "workspace:*",
-    "@sugar/eslint-config-custom": "workspace:*",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/node": "^18.11.13",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-router-dom": "^5.3.3",
-    "classnames": "^2.3.2",
-    "jsdom": "latest",
-    "lint-staged": "^13.1.0",
-    "plop": "^3.1.1",
-    "prettier": "^2.8.1",
-    "styled-components": "^5.3.9",
-    "turbo": "^1.10.12",
-    "typescript": "^5",
-    "vitest": "^0.25.8",
     "@hookform/resolvers": "^3.1.0",
     "@radix-ui/react-accessible-icon": "^1.0.3",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -66,11 +49,21 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@sugar-core/typings": "workspace:*",
+    "@sugar/eslint-config-custom": "workspace:*",
     "@tanstack/react-table": "^8.9.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/node": "^18.11.13",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/zxcvbn": "^4.4.5",
     "@vercel/analytics": "^1.2.2",
     "@vercel/og": "^0.0.21",
     "change-case": "^5.4.4",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "cmdk": "^1.0.0",
     "contentlayer2": "^0.4.6",
@@ -81,12 +74,16 @@
     "geist": "^1.2.2",
     "input-otp": "^1.2.2",
     "jotai": "^2.1.0",
+    "jsdom": "latest",
+    "lint-staged": "^13.1.0",
     "lodash.template": "^4.5.0",
     "lucide-react": "0.359.0",
     "markdown-wasm": "^1.2.0",
     "next": "14.3.0-canary.43",
     "next-contentlayer2": "^0.4.6",
     "next-themes": "^0.2.1",
+    "plop": "^3.1.1",
+    "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
@@ -96,10 +93,14 @@
     "recharts": "2.12.7",
     "sharp": "^0.31.3",
     "sonner": "^1.2.3",
+    "styled-components": "^5.3.9",
     "swr": "2.2.6-beta.3",
     "tailwind-merge": "^1.12.0",
     "ts-morph": "^22.0.0",
+    "turbo": "^1.10.12",
+    "typescript": "^5",
     "vaul": "0.9.0",
+    "vitest": "^0.25.8",
     "zod": "^3.21.4"
   },
   "lint-staged": {
