--- a/front/packages/effects/common-ui/package.json
+++ b/front/packages/effects/common-ui/package.json
@@ -9,23 +9,25 @@
   "author": "",
   "dependencies": {
     "@ant-design/icons": "4.0.0",
-    "@vitejs/plugin-react-swc": "^3.0.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "react-redux": "^9.1.2",
+    "@vitejs/plugin-react-swc": "^3.0.0",
     "handlebars": "^4.7.8",
+    "qrcode": "^1.5.4",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.9.0",
     "vite": "^4.0.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
     "@sugar-core/preferences": "workspace:*",
-    "@sugar-core/typings": "workspace:*",
     "@sugar-core/shadcn-ui": "workspace:*",
-    "@sugar/locales":"workspace:*",
+    "@sugar-core/typings": "workspace:*",
     "@sugar/eslint-config-custom": "workspace:*",
+    "@sugar/locales": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/node": "^18.11.13",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
