--- a/front/vercel.json
+++ b/front/vercel.json
@@ -1,5 +1,17 @@
 {
-  "rewrites":  [
-    {"source": "/(.*)", "destination": "/"}
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "apps/webs/dist" 
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
   ]
 }
