更新配置文件

--- a/front/vercel.json
+++ b/front/vercel.json
@@ -2,6 +2,7 @@
   "builds": [
     {
       "src": "front/package.json", 
+      "use": "@vercel/static-build",
       "config": {
         "distDir": "front/apps/webs/dist"  
       }
