--- a/front/apps/backed-mock/package.json
+++ b/front/apps/backed-mock/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "0.6.1",
   "scripts": {
-    "dev": "node src/server.js",
-    "build": "vite build",
+    "dev": "tsup --watch --onSuccess \"node dist/server.js\"",
+    "build": "tsup",
     "preview": "vite preview",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist && rm -rf build"
   },
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@types/mockjs": "^1.0.7",
     "@types/react": "^18.2.22",
+    "tsup": "^8.0.2",
+
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^3.1.0",
     "@types/lodash": "^4.14.191",
