--- a/front/packages/effects/common-ui/package.json
+++ b/front/packages/effects/common-ui/package.json
@@ -20,8 +20,11 @@
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
     "@sugar-core/preferences": "workspace:*",
-    "@sugar-core/shadcn-ui": "workspace:*",
     "@sugar/eslint-config-custom": "workspace:*",
+    "turbo": "^1.10.12",
+    "typescript": "^5",
+    "vitest": "^0.25.8",
+    "@sugar-core/shadcn-ui": "workspace:*",
     "@sugar/locales": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -37,10 +40,8 @@
     "lint-staged": "^13.1.0",
     "plop": "^3.1.1",
     "prettier": "^2.8.1",
-    "styled-components": "^5.3.9",
-    "turbo": "^1.10.12",
-    "typescript": "^5",
-    "vitest": "^0.25.8"
+    "styled-components": "^5.3.9"
+ 
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": "eslint --ext .js,.jsx,.ts,.tsx --fix --max-warnings=0",
