--- a/front/packages/effects/common-ui/package.json
+++ b/front/packages/effects/common-ui/package.json
@@ -15,7 +15,10 @@
     "qrcode": "^1.5.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.9.0",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "react-hook-form": "^7.44.2",
+    "zod": "^3.21.4",
+    "@hookform/resolvers": "^3.1.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
