--- a/front/package.json
+++ b/front/package.json
@@ -52,5 +52,17 @@
     "doc": "doc",
     "example": "examples"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": ">=20",
+    "pnpm": ">=8"
+  },
+  "packageManager": "pnpm@9.9.0",
+  "pnpm": {
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "eslint": "*"
+      }
+    }
+  }
 }
