--- a/front/apps/webs/package.json
+++ b/front/apps/webs/package.json
@@ -13,8 +13,8 @@
     "@sugar/layout-ui": "workspace:*",
     "@sugar-core/preferences": "workspace:*",
     "@sugar/hooks":"workspace:*",
+    "@sugar/types":"workspace:*",
     "@sugar-core/shadcn-ui":"workspace:*",
-    "@sugar-core/types":"workspace:1.0.0",
     "@sugar/request":"workspace:*",
     "@sugar/common-ui": "workspace:*",
     "@sugar/locales": "workspace:*",
