--- a/front/packages/@core/ui-kit/layout-ui/package.json
+++ b/front/packages/@core/ui-kit/layout-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sugar/layout-ui",
+  "name": "@sugar-core/layout-ui",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -8,21 +8,15 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@ant-design/icons": "4.0.0",
-    "@reduxjs/toolkit": "^2.2.7",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "handlebars": "^4.7.8",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.9.0",
     "vite": "^4.0.0",
-    "@sugar-core/preferences": "workspace:*",
-    "@sugar-core/layout-ui": "workspace:*"
-    
+    "@sugar-core/shadcn-ui": "workspace:*",
+    "@sugar-core/shared": "workspace:*"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
     "@sugar/eslint-config-custom": "workspace:*",
-    "@sugar/locales": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/node": "^18.11.13",
