--- a/front/packages/effects/layouts/package.json
+++ b/front/packages/effects/layouts/package.json
@@ -23,6 +23,7 @@
     "@changesets/cli": "^2.26.0",
     "@sugar/eslint-config-custom": "workspace:*",
     "@sugar-core/menu-ui": "workspace:*",
+    "@sugar-core/shadcn-ui": "workspace:*",
     "@sugar/locales": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
